# mrm

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  STRATEGY.md  demo-script.md  demo-setup.sh
mrm-core/: ARCHITECTURE.md  COMPLETE_FEATURES.md  CONTRIBUTING.md  DAG_FEATURES.md  DELIVERY_SUMMARY.md  DIRECTORY_STRUCTURE.txt  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MODEL_REFERENCES.md  MRM_LIFECYCLE.md  Makefile  PROJECT_SUMMARY.md  README.md  REFERENCE_TYPES.md  pyproject.toml  setup.py  test_databricks_integration.py
mrm-core/ccr_example/: mrm_project.yml  profiles.yml  run_validation.py  setup_ccr_example.py
mrm-core/ccr_example/demo-artefacts/: demo_record_id.txt  root.key
mrm-core/ccr_example/demo-artefacts/chain/: chain.secret
mrm-core/ccr_example/demo-artefacts/reports/: ccr_monte_carlo_sr26_2.md
mrm-core/ccr_example/demo-artefacts/roots/: 2026-05-17.root.json
mrm-core/ccr_example/mlruns/0/: meta.yaml
mrm-core/ccr_example/reports/: ccr_monte_carlo_cps230_report.md  ccr_monte_carlo_eu_ai_act_report.md  ccr_monte_carlo_euaiact_report.md  ccr_monte_carlo_osfi_e23_report.md  ccr_monte_carlo_osfie23_report.md  ccr_monte_carlo_sr117_report.md  ccr_monte_carlo_sr26_2_report.md  validation_evidence.json
mrm-core/credit_risk_example/: README.md  mrm_project.yml  profiles.yml
mrm-core/credit_risk_example/reports/: credit_scorecard_cps230_report.md  credit_scorecard_eu_ai_act_report.md  credit_scorecard_euaiact_report.md  credit_scorecard_osfi_e23_report.md  credit_scorecard_osfie23_report.md  credit_scorecard_sr117_report.md  credit_scorecard_sr26_2_report.md
mrm-core/docs/: CROSSWALK.md  README.md
mrm-core/docs/adr/: 0001-pluggable-compliance-standards.md  0002-evidence-vault-hash-chain.md  0003-replay-as-first-class-primitive.md  0004-otlp-wire-format-for-replay.md  0005-oss-vs-cloud-split.md  0006-signer-plugpoint-and-hsm-tiering.md  README.md  template.md
mrm-core/docs/framework_guides/: README.md  custom_wrappers.md  pytorch.md  sklearn.md  tensorflow.md
mrm-core/docs/guides/: COMPLETE_FEATURES.md  GETTING_STARTED.md  MRM_LIFECYCLE.md  QUICKSTART.md
mrm-core/docs/spec/: README.md  compliance-plugin-v1.md  evidence-vault-v1.md  replay-record-v1.md
mrm-core/examples/: dag_example.py  example_usage.py
mrm-core/genai_example/: README.md  mrm_project.yml  profiles.yml  run_validation.py  setup_genai_example.py
mrm-core/genai_example/data/: ground_truth_qa.json  injection_attacks.json  jailbreak_attempts.json  knowledge_base.faiss  knowledge_base.json  prompt_bias_test.json
mrm-core/genai_example/reports/: rag_assistant_cps230_report.md  rag_assistant_euaiact_report.md  rag_assistant_sr117_report.md  rag_assistant_sr26_2_report.md
mrm-core/mlruns/0/: meta.yaml
mrm-core/mlruns/572936067304191273/: meta.yaml
mrm-core/mrm/: __init__.py
mrm-core/mrm/backends/: __init__.py  base.py  litellm_endpoint.py  llm_endpoints.py  local.py  mlflow.py  rag_retriever.py
mrm-core/mrm/cli/: main.py
mrm-core/mrm/compliance/: __init__.py  base.py  registry.py  report_generator.py
mrm-core/mrm/core/: backend_resolver.py  catalog.py  dag.py  init.py  project.py  references.py  triggers.py
mrm-core/mrm/drift/: __init__.py  base.py  registry.py
mrm-core/mrm/engine/: runner.py
mrm-core/mrm/evidence/: __init__.py  _conformance.py  base.py  chain.py  merkle.py  packet.py  sign.py
mrm-core/mrm/replay/: __init__.py  capture.py  instrument.py  otlp.py  record.py  verify.py
mrm-core/mrm/reporting/: cps230_report.py
mrm-core/mrm/tests/: base.py  library.py  test_backend_resolver.py  test_compliance_aliases.py  test_compliance_sr26_2.py  test_databricks_unity.py  test_drift_module.py  test_drift_tabular_tests.py  test_evidence_chain.py  test_evidence_conformance.py  test_evidence_merkle.py  test_evidence_sign.py  test_replay_backend_local.py  test_replay_backend_s3.py  test_replay_capture.py  test_replay_instrument.py  test_replay_llm_adapter.py  test_replay_otlp.py  test_replay_record.py  test_replay_verify.py
mrm-core/mrm/utils/: yaml_utils.py
(+57 files in other folders)
