[tool.poetry]
name = "mrm-core"
version = "0.1.0"
description = "Open source Model Risk Management CLI framework"
authors = ["MRM Contributors"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mrm"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.0.0"
pyyaml = "^6.0"
rich = "^13.0.0"
jinja2 = "^3.1.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"

# Runtime dependencies for Databricks + MLflow support
mlflow = "^2.8.0"
databricks-sdk = "^0.10.0"
requests = "^2.31.0"
great-expectations = {version = "^0.18.0", optional = true}
wandb = {version = "^0.16.0", optional = true}

[tool.poetry.extras]
ge = ["great-expectations"]
wandb = ["wandb"]
all = ["great-expectations", "wandb"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
mrm = "mrm.cli.main:app"

[tool.poetry.plugins."mrm.backends"]
local = "mrm.backends.local:LocalBackend"
mlflow = "mrm.backends.mlflow:MLflowBackend"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
